# video-converter

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  mypy.ini  nixpacks.toml  pyproject.toml  requirements.txt  run.sh  setup.py  setup.sh
.windsurf/: memory-index.md
.windsurf/architecture/: high_complexity_refactoring.md  solid_architecture.md
.windsurf/core/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
.windsurf/metrics/: baseline_metrics_summary.md
.windsurf/plans/: infrastructure-enhancement-plan.md  lottie-animation-enhancement-plan.md  solid-refactoring-plan.md  testing-strategy-plan.md  video-converter-plan.md  video-format-conversion-enhancement-plan.md
.windsurf/task-logs/: task-log_2025-05-20-22-47_memory-bank-initialization.md  task-log_2025-05-20-22-51_code-exploration.md  task-log_2025-05-20-22-56_enhancement-planning.md  task-log_2025-05-20-23-00_solid-refactoring-plan.md  task-log_2025-05-20-23-10_baseline-metrics-collection.md  task-log_2025-05-20-23-15_test-suite-creation.md  task-log_2025-05-20-23-20_parameter-object-design.md  task-log_2025-05-20-23-25_architecture-design.md  task-log_2025-05-20-23-35_core-interface-implementation.md  task-log_2025-05-20-23-45_trace-png-to-svg-refactoring.md  task-log_2025-05-20-23-55_extract-frames-refactoring.md  task-log_2025-05-21-00-05_convert-video-refactoring.md  task-log_2025-05-21-00-30_convert-video-format-task-refactoring.md  task-log_2025-05-21-00-45_parse-svg-to-paths-refactoring.md  task-log_2025-05-21-00-50_svg-parsing-lint-fixes.md  task-log_2025-05-21-01-15_svg-parsing-lint-fixes-completion.md  task-log_2025-05-21_refactor-process-video-task.md
.windsurf/tools/: code_metrics.py
app/: config.py  lottie_generator.py  main.py  task_queue.py  thumbnail_generator.py  uploader.py  utils.py  utils_refactored.py  video_converter.py  video_converter_refactored.py
app/domain/: __init__.py
app/domain/interfaces/: __init__.py  converter.py  frame_extraction.py  (+8 more)
app/infrastructure/: frame_extractor.py  image_tracer.py  video_converter.py  video_processor.py
app/lottie/: __init__.py  facade.py  image_processor.py  image_processor_refactored.py  interfaces.py  json_encoder.py  lottie_generator.py  svg_parser.py
app/models/: __init__.py  base_params.py  lottie_params.py  svg_parsing_params.py  task_params.py  video_format_params.py  video_params.py
static/: test_convert.html  test_upload.html
tests/: base_test.py  conftest.py  debug_upload.py  requirements.txt  test_client.py  test_color_preservation.py  test_components.py  test_extract_frames.py  test_upload.html  test_upload.py  test_video_to_lottie.py  video.webm
tests/models/: test_svg_parsing_params.py
tests/output/: lottie_player.html
(+44 files in other folders)
