[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video_converter"
version = "1.0.0"
description = "A service that converts videos between different formats with optimization"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Muhammad Irfan", email = "mrfansi@outlook.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.95.1",
    "uvicorn>=0.22.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "ffmpeg-python>=0.2.0",
    "numpy>=1.24.3",
    "Pillow>=9.5.01",
    "svglib>=1.5.1",
    "svgelements>=1.9.0",
    "boto3>=1.26.135",
    "python-dotenv>=1.0.0",
    "opencv-python>=4.8.0",
    "requests>=2.31.0",
]

[project.urls]
"Homepage" = "https://github.com/mrfansi/video-converter"
"Bug Tracker" = "https://github.com/mrfansi/video-converter/issues"

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-data]
app = ["*.py"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[project.scripts]
start = "app.main:start_app"
dev = "app.main:start_dev"
